Refactor getFirst in a unit test